--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "https://github.com/twbs/bootstrap/tarball/v4-dev",
-    "angular": "1.0.0"
+    "angular": "1.0.0",
+    "angular-route": "1.5.8"
   },
   "devDependencies": {
     "gulp": "*",
@@ -14,7 +15,8 @@
     "gulp-concat": "*",
     "gulp-uglify": "*",
     "gulp-watch": "*",
-    "gulp-imagemin": "*"
+    "gulp-imagemin": "*",
+    "gulp-if": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
