--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "jquery": "3.1.1",
+    "tether": "1.3.3",
     "bootstrap": "https://github.com/twbs/bootstrap/tarball/v4-dev",
-    "angular": "1.0.0",
-    "angular-route": "1.5.8"
+    "angular": "1.4.2",
+    "angular-route": "1.4.2"
   },
   "devDependencies": {
     "gulp": "*",
