--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "gulp": "*",
+    "gulp-clean": "^0.3.1",
     "gulp-sass": "*",
     "gulp-minify-css": "*",
     "gulp-concat": "*",
