--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,16 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        AppBundle\Entity\User\SuperAdminUser:
+            algorithm: bcrypt
+
+        AppBundle\Entity\User\AdminUser:
+            algorithm: bcrypt
+
+    role_hierarchy:
+        ROLE_SUPERADMIN: [ROLE_ADMIN]
+        ROLE_ADMIN: [ROLE_USER]
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
