--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "jquery": "3.1.1",
     "tether": "1.3.3",
-    "bootstrap": "https://github.com/twbs/bootstrap/tarball/v4-dev",
+    "bootstrap": "https://github.com/twbs/bootstrap/tarball/v4-dev"
   },
   "devDependencies": {
     "gulp": "*",
