--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    knp.doctrine_behaviors.blameable_subscriber.user_entity: AppBundle\Entity\User\BaseUser
 
 framework:
     #esi:             ~
@@ -72,3 +73,11 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+knp_doctrine_behaviors:
+    blameable:      true
+    geocodable:     ~     # Here null is converted to false
+    loggable:       ~
+    sluggable:      false
+    soft_deletable: false
+    # All others behaviors are disabled
