--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "nelmio/alice": "^2.2",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "stof/doctrine-extensions-bundle": " ^1.2",
-        "doctrine/doctrine-migrations-bundle": "^1.0"
+        "doctrine/doctrine-migrations-bundle": "^1.0",
+        "knplabs/doctrine-behaviors": "~1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
