finished rendering ajax forms errors, added constraints, updates forms templates

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -15,3 +15,6 @@ services:
             - "@validator"
         tags:
             - { name: console.command }
+
+    form_errors:
+        class: AppBundle\Services\GetFormErrors
