--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "jquery": "3.1.1",
+    "jquery-ui-dist": "^1.12.1",
     "tether": "1.3.3",
     "bootstrap": "3.3.7"
   },
